editors/tree-sitter-goal/grammar.js
    source_file: ($) =>
      seq(
        optional(terminator($)),
        repeat(seq($._top_level_declaration, optional(terminator($)))),
      ),

    _top_level_declaration: ($) =>
      choice(
        $.package_clause,
        $.import_declaration,
        $.function_declaration,
        $.method_declaration,
        $.type_declaration,
        $.sealed_interface_declaration,
        $.enum_declaration,
        $.const_declaration,
        $.var_declaration,
        $.from_declaration,
        $.derive_declaration,
      ),

    // ---- package / import ----
    package_clause: ($) => seq("package", field("name", $.identifier)),

    function_declaration: ($) =>
      seq(
        "func",
        field("name", $.identifier),
        optional(field("type_parameters", $.type_parameters)),
        field("parameters", $.parameter_list),
        optional(field("result", $._result)),
        optional(field("body", $.block)),
      ),

    from_declaration: ($) => seq("from", $.function_declaration),
    derive_declaration: ($) => seq("derive", $.function_declaration),

    parameter_list: ($) => seq("(", commaSep($.parameter), ")"),
    parameter: ($) =>
      choice(
        seq(field("name", commaSep1($.identifier)), optional("..."), field("type", $._type)),
        seq(optional("..."), field("type", $._type)),
      ),

    _result: ($) => choice($.parameter_list, $._type),

    type_declaration: ($) =>
      seq(
        "type",
        field("name", $.identifier),
        optional(field("type_parameters", $.type_parameters)),
        choice(seq("=", field("type", $._type)), field("type", $._type)),
      ),

    // goal: a sealed (closed) interface, named after the `interface` keyword.
    sealed_interface_declaration: ($) =>
      seq(
        "sealed",
        "interface",
        field("name", $.identifier),
        optional(field("type_parameters", $.type_parameters)),
        "{",
        optional(terminator($)),
        repeat(seq($._interface_member, optional(terminator($)))),
        "}",
      ),

    // goal: a struct's inline assertion that it satisfies one or more interfaces.
    implements_clause: ($) => seq("implements", commaSep1($._type)),

    enum_declaration: ($) =>
      seq(
        "enum",
        field("name", $.identifier),
        "{",
        optional(terminator($)),
        repeat(seq($.enum_variant, optional(terminator($)))),
        "}",
      ),
    enum_variant: ($) =>
      seq(field("name", $.identifier), optional(field("payload", $.variant_payload))),
    variant_payload: ($) =>
      seq("{", commaSep1($.payload_field), "}"),
    // Canonical form is `name: Type`; the struct-style `name Type` is also accepted.
    payload_field: ($) =>
      seq(field("name", $.identifier), optional(":"), field("type", $._type)),

    // ---- types ----
    _type: ($) =>
      choice(
        $.type_identifier,
        $.qualified_type,
        $.generic_type,
        $.pointer_type,
        $.slice_type,
        $.array_type,
        $.map_type,
        $.channel_type,
        $.function_type,
        $.struct_type,
        $.interface_type,
        $.parenthesized_type,
      ),

    type_identifier: ($) => alias($.identifier, $.type_identifier),
    generic_type: ($) =>
      seq(field("name", choice($.type_identifier, $.qualified_type)), field("arguments", $.type_arguments)),
    type_arguments: ($) => seq("[", commaSep1($._type), "]"),
    struct_type: ($) =>
      seq(
        "struct",
        optional(field("implements", $.implements_clause)),
        "{",
        optional(terminator($)),
        repeat(seq($.field_declaration, optional(terminator($)))),
        "}",
      ),
    field_declaration: ($) =>
      choice(
        seq(field("name", commaSep1($.identifier)), field("type", $._type), optional(field("tag", $._string_literal))),
        seq(optional("*"), field("type", choice($.type_identifier, $.qualified_type)), optional(field("tag", $._string_literal))),
      ),

    _interface_member: ($) => choice($.method_spec, $._type),
    block: ($) =>
      seq("{", optional(terminator($)), repeat(seq($._statement, optional(terminator($)))), "}"),

    _statement: ($) =>
      choice(
        $.block,
        $.return_statement,
        $.if_statement,
        $.for_statement,
        $.switch_statement,
        $.go_statement,
        $.defer_statement,
        $.fallthrough_statement,
        $.assert_statement,
        $.const_declaration,
        $.var_declaration,
        $.short_var_declaration,
        $.assignment_statement,
        $.inc_dec_statement,
        $.expression_statement,
      ),

    return_statement: ($) => seq("return", optional(commaSep1($._expression))),
    if_statement: ($) =>
      seq(
        "if",
        optional(seq(field("initializer", $._simple_statement), ";")),
        field("condition", $._expression),
        field("consequence", $.block),
        optional(seq("else", field("alternative", choice($.block, $.if_statement)))),
      ),

    switch_statement: ($) =>
      seq(
        "switch",
        optional(seq(field("initializer", $._simple_statement), ";")),
        optional(field("value", $._simple_statement)),
        "{",
        repeat(choice($.case_clause, $.default_clause)),
        "}",
      ),
    case_clause: ($) =>
      seq(
        "case",
        commaSep1(choice($._expression, $._type)),
        ":",
        repeat(seq($._statement, optional(terminator($)))),
      ),
    default_clause: ($) =>
      seq("default", ":", repeat(seq($._statement, optional(terminator($))))),

    _simple_statement: ($) =>
      choice($.short_var_declaration, $.assignment_statement, $.inc_dec_statement, $.expression_statement),

    short_var_declaration: ($) =>
      seq(field("left", commaSep1($._expression)), ":=", field("right", commaSep1($._expression))),

    expression_statement: ($) => $._expression,

    // ---- match (goal) ----
    match_expression: ($) =>
      seq("match", field("value", $._expression), "{", optional(terminator($)), repeat(seq($.match_arm, optional(terminator($)))), "}"),
    match_arm: ($) => seq(field("pattern", $._pattern), "=>", field("body", $._statement)),
    _pattern: ($) => choice($._expression, alias("_", $.rest_pattern)),

    // ---- expressions ----
    _expression: ($) =>
      choice(
        $.identifier,
        $.selector_expression,
        $.call_expression,
        $.index_expression,
        $.type_assertion,
        $.composite_literal,
        $.unary_expression,
        $.binary_expression,
        $.unwrap_expression,
        $.match_expression,
        $.parenthesized_expression,
        $._literal,
        $.true,
        $.false,
        $.nil,
        $.iota,
      ),

    selector_expression: ($) =>
      prec(PREC.primary, seq(field("operand", $._expression), ".", field("field", $.identifier))),

    // The function may be a type for a conversion: `[]byte(p)`, `map[K]V(x)`, `(*T)(x)`.
    call_expression: ($) =>
      prec(
        PREC.primary,
        seq(
          field("function", choice($._expression, $.slice_type, $.array_type, $.map_type, $.pointer_type, $.parenthesized_type)),
          field("arguments", $.argument_list),
        ),
      ),
    // Arguments may be labeled (`Status.Active(since: now())`) — the goal variant/
    // construction call form — as well as positional or a trailing spread.
    argument_list: ($) =>
      seq("(", commaSep(choice($.labeled_argument, $.spread_element, $._expression)), ")"),
    type_assertion: ($) =>
      prec(PREC.primary, seq(field("operand", $._expression), ".", "(", choice($._type, "type"), ")")),

    composite_literal: ($) =>
      prec(
        PREC.composite_literal,
        seq(field("type", choice($.type_identifier, $.qualified_type, $.generic_type, $.slice_type, $.array_type, $.map_type)), field("body", $.literal_value)),
      ),
    literal_value: ($) =>
      seq("{", commaSep(choice($.keyed_element, $.spread_element, $._expression)), "}"),
    keyed_element: ($) =>
      seq(field("key", choice($.identifier, $._expression)), ":", field("value", choice($._expression, $.literal_value))),
    spread_element: ($) =>
      choice(seq("...", "defaults"), seq("...", "derive", optional($.argument_list)), seq("...", $._expression)),

    binary_expression: ($) => {
      const table = [
        [PREC.multiplicative, choice(...multiplicative_ops)],
        [PREC.additive, choice(...additive_ops)],
        [PREC.comparative, choice(...comparative_ops)],
        [PREC.and, "&&"],
        [PREC.or, "||"],
      ];
      return choice(
        ...table.map(([precedence, operator]) =>
          prec.left(precedence, seq(field("left", $._expression), field("operator", operator), field("right", $._expression))),
        ),
      );
    },

    unwrap_expression: ($) => prec(PREC.primary, seq($._expression, "?")),

    // ---- literals ----
    _string_literal: ($) => choice($.interpreted_string_literal, $.raw_string_literal),

    interpreted_string_literal: ($) =>
      seq('"', repeat(choice(token.immediate(prec(1, /[^"\\\n]+/)), $.escape_sequence)), '"'),
    int_literal: ($) => token(choice(/0[xX][0-9a-fA-F_]+/, /0[oO]?[0-7_]+/, /0[bB][01_]+/, /[0-9][0-9_]*/)),
    identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    // ---- comments ----
    // `///` doc comments win over `//` line comments via higher token precedence.
    doc_comment: ($) => token(prec(1, seq("///", /.*/))),
  },
});
